--- a/plugins/ProtocolLib/config.yml
+++ b/plugins/ProtocolLib/config.yml
@@ -3,28 +3,28 @@ global:
   auto updater:
     notify: true
     download: false
-    
+
     # Number of seconds to wait until a new update is downloaded
     delay: 43200 # 12 hours
- 
+
   metrics: true
-  
-  # Automatically compile structure modifiers 
+
+  # Automatically compile structure modifiers
   background compiler: true
-  
+
   # Disable version checking for the given Minecraft version. Backup your world first!
-  ignore version check: 
-  
+  ignore version check: true
+
   # Override the starting injecting method
-  injection method: 
-  
+  injection method:
+
   # Whether or not to enable the filter command
   debug: false
-  
+
   # Whether or not to print a stack trace for every warning
   detailed error: false
-  
+
   # The engine used by the filter command
   script engine: JavaScript
-  
+
   suppressed reports:
