--- a/plugins/Citizens/saves.yml
+++ b/plugins/Citizens/saves.yml
@@ -44,7 +44,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,mounttrait,speech,anchors,lookclose,owner,text,spawned,location,waypoints,inventory,type,equipment
+    traitnames: mounttrait,speech,gravity,inventory,waypoints,lookclose,type,text,location,spawned,anchors,equipment,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -89,7 +89,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,mounttrait,speech,spawned,text,anchors,lookclose,location,inventory,owner,type,equipment
+    traitnames: mounttrait,gravity,speech,location,text,spawned,inventory,anchors,equipment,lookclose,type,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -121,7 +121,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
+    traitnames: mounttrait,gravity,location,inventory,spawned,equipment,lookclose,type,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -153,7 +153,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
+    traitnames: mounttrait,gravity,location,spawned,inventory,equipment,lookclose,type,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -185,7 +185,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
+    traitnames: mounttrait,gravity,location,spawned,inventory,equipment,lookclose,type,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -217,7 +217,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
+    traitnames: mounttrait,gravity,location,spawned,inventory,equipment,lookclose,type,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -244,7 +244,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
+    traitnames: mounttrait,gravity,location,spawned,inventory,equipment,lookclose,type,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -276,7 +276,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
+    traitnames: mounttrait,gravity,location,spawned,inventory,equipment,lookclose,type,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -313,7 +313,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
+    traitnames: mounttrait,gravity,location,spawned,inventory,equipment,lookclose,type,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -345,7 +345,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
+    traitnames: mounttrait,gravity,location,inventory,spawned,equipment,lookclose,type,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -377,7 +377,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
+    traitnames: mounttrait,gravity,location,spawned,inventory,equipment,lookclose,type,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -409,7 +409,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
+    traitnames: mounttrait,gravity,location,spawned,inventory,equipment,lookclose,type,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -441,7 +441,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
+    traitnames: mounttrait,gravity,location,inventory,spawned,equipment,lookclose,type,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -609,7 +609,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,mounttrait,spawned,lookclose,sentinel,location,inventory,waypoints,owner,type,equipment
+    traitnames: mounttrait,gravity,location,inventory,spawned,equipment,waypoints,lookclose,type,sentinel,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -741,7 +741,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,mounttrait,spawned,lookclose,sentinel,location,inventory,owner,type,equipment
+    traitnames: mounttrait,gravity,location,inventory,spawned,equipment,lookclose,type,owner,sentinel
     navigator:
       pathfindingrange: '100.0'
       speedmodifier: '1.0'
@@ -764,9 +764,9 @@ npc:
         realisticlooking: false
       location:
         world: Survival
-        x: '231.7343'
-        y: '63.8351'
-        z: '382.2852'
+        x: '231.7293'
+        y: '63.4041'
+        z: '382.3546'
         yaw: '-135.72506713867188'
         pitch: '0.0'
       type: PLAYER
@@ -797,8 +797,8 @@ npc:
           durability: 0
           mdata: 0
       sentinel:
-        stats_ticksSpawned: 31587287
-        stats_timesSpawned: 134
+        stats_ticksSpawned: 31588196
+        stats_timesSpawned: 135
         stats_arrowsFired: 0
         stats_potionsThrow: 0
         stats_fireballsFired: 0
@@ -873,7 +873,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,mounttrait,spawned,lookclose,sentinel,location,inventory,owner,type,equipment
+    traitnames: mounttrait,gravity,location,inventory,spawned,equipment,lookclose,type,sentinel,owner
     navigator:
       pathfindingrange: '100.0'
       speedmodifier: '1.0'
@@ -906,7 +906,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
+    traitnames: mounttrait,gravity,location,spawned,inventory,equipment,lookclose,type,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -938,7 +938,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
+    traitnames: mounttrait,gravity,location,spawned,inventory,equipment,lookclose,type,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -967,7 +967,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,type,equipment
+    traitnames: mounttrait,gravity,location,spawned,inventory,equipment,lookclose,type
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -996,7 +996,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,type,equipment
+    traitnames: mounttrait,gravity,location,spawned,inventory,equipment,lookclose,type
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1025,7 +1025,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,type,equipment
+    traitnames: mounttrait,gravity,location,inventory,spawned,equipment,lookclose,type
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1054,7 +1054,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,type,equipment
+    traitnames: mounttrait,gravity,location,spawned,inventory,equipment,lookclose,type
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1083,7 +1083,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,type,equipment
+    traitnames: mounttrait,gravity,location,inventory,spawned,equipment,lookclose,type
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1112,7 +1112,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,type,equipment
+    traitnames: mounttrait,gravity,location,spawned,inventory,equipment,lookclose,type
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1141,7 +1141,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,type,equipment
+    traitnames: mounttrait,gravity,location,inventory,spawned,equipment,lookclose,type
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1173,7 +1173,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
+    traitnames: mounttrait,gravity,location,inventory,spawned,equipment,lookclose,type,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1202,7 +1202,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,type,equipment
+    traitnames: mounttrait,gravity,location,spawned,inventory,equipment,lookclose,type
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1231,7 +1231,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,type,equipment
+    traitnames: mounttrait,gravity,location,inventory,spawned,equipment,lookclose,type
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1256,7 +1256,7 @@ npc:
       age:
         age: 0
         locked: true
-    traitnames: mounttrait,spawned,age,lookclose,location,type
+    traitnames: mounttrait,location,spawned,lookclose,age,type
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
